# Network-P1

./: .gitignore  README.md  client.py  mcp_config.json  pyproject.toml  requirements.txt
remote-mcp/: go.mod  server.go
